# simple_hasher

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
